--- a/ThaniyasApp/ClientApp/src/containers/core/Registration/Reg.scss
+++ b/ThaniyasApp/ClientApp/src/containers/core/Registration/Reg.scss
@@ -50,7 +50,7 @@
         color: white;
         padding: 14px 20px;
        // margin-left: 20%;
-        width:27%;
+        /*width:27%;*/
        // margin-top: 60%;
         border: none;
         border-radius: 4px;
