Added initial form validation
Added initial form validation

--- a/ThaniyasApp/ClientApp/src/containers/core/Registration/Reg.scss
+++ b/ThaniyasApp/ClientApp/src/containers/core/Registration/Reg.scss
@@ -180,16 +180,19 @@
 }
 
 .cancel-btn {
-    background-color: #0b540e;
+    background-color: orangered;
     color: white;
     padding: 14px 20px;
     width: 27%;
     border: none;
-    margin-top: 8px;
     border-radius: 50px;
     cursor: pointer;
 }
-
+.help.is-danger {
+    color: red;
+    font-size: x-small;
+    margin: 0;
+}
 .cancel-btn:hover {
     background-color: #859d7f;
     color:darkgreen;
