--- a/ionic web/src/containers/core/Registration/Reg.scss
+++ b/ionic web/src/containers/core/Registration/Reg.scss
@@ -421,3 +421,19 @@ label{
 .row:last-child .col {
     border-bottom: solid 1px grey;
 }
+
+.table{
+    width: 100%;
+    text-align: center;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+  th, td {
+    padding: 5px;
+  }
+  th {
+    text-align: left;
+  }
