--- a/ionic web/src/containers/core/Registration/Reg.scss
+++ b/ionic web/src/containers/core/Registration/Reg.scss
@@ -202,11 +202,14 @@
     @media screen and (max-width: 600px) {
         .arrow {
             float: left;
-            margin-top: 2%;
+            margin-top: 5%;
         }
     }
 
     @media screen and (max-width: 600px) {
+        .Headerlogo {
+            margin-left: -60%;
+        }
         .logo {
             margin-left: 1%;
         }
